methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:2: error: value Blue is not a member of object java.awt.Color
  var color:Color = Color.Blue
                          ^MethodsPicture:13: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
        faireV()
              ^